<resources>
    <string name="app_name">Ревизор</string>
    <string name="btnInumName">Искать</string>
    <string name="toast_if_input_not_number">Номер может состоять только из цифр</string>
    <string name="aboutOwner">USER:</string>
    <string name="aboutSenior">\nBOSS:</string>
    <string name="show_about_close_btn">Закрыть</string>
    <string name="tv_dialog_item_text">Наименование</string>
    <string name="tv_dialog_conf_text">Конфигурация</string>
    <string name="tv_dialog_owner_text">Пользователь</string>
    <string name="tv_dialog_department_text">Подразделение</string>
    <string name="tv_dialog_senior_text">Ответственный</string>
    <string name="tv_dialog_barcode_text">Штрих-код</string>
    <string name="tv_dialog_last_verified_text">Дней с проверки</string>
    <string name="etInumHint">Инвентарный номер</string>
    <string name="no_inum">База не содержит записей об этом инвентарном номере</string>
    <string name="menu_preferences">Настройки</string>
    <string name="menu_add_device">Добавить устройство</string>
    <string name="prefs_label">Настройки</string>
    <string name="pref_url">URL сервера</string>
    <string name="pref_login">Логин</string>
    <string name="pref_password">Пароль</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_server">Подключение сервера</string>
    <string name="pref_url_summary">Полынй адрес веб-сервера</string>
    <string name="pref_login_summary">Имя польователя сервера</string>
    <string name="pref_password_summary">Пароль</string>
    <string name="no_prefs_msg">Отсутствует одна или несколько обязательных настроек. Внесите необходимые изменения и начните работу.</string>
    <string name="toast_if_et_empty">Не заполнено поле инвентарного номера</string>
    <string name="add_dev_label">Добавление нового устройства</string>
</resources>