<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_url"/>
    <EditText
        android:id="@+id/etPrefURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="http://"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_login"
        android:textAppearance="?android:textAppearanceLarge"/>
    <EditText
        android:id="@+id/etPrefLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="login"/>
    <TextView
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_password"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/etPrefPass" />
</LinearLayout>