<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivDialog"
            android:layout_width="20dp"
            android:layout_height="20dp" />
        <TextView
            android:id="@+id/tvDialogNum"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvDialogItemText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dialogHeaders"
                android:text="@string/tv_dialog_item_text"/>
            <TextView
                android:id="@+id/tvDialogItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvDialogConfText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dialogHeaders"
                android:text="@string/tv_dialog_conf_text"/>
            <TextView
                android:id="@+id/tvDialogConf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvDialogOwnerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dialogHeaders"
                android:text="@string/tv_dialog_owner_text"/>
            <TextView
                android:id="@+id/tvDialogOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvDialogDepartmentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dialogHeaders"
                android:text="@string/tv_dialog_department_text"/>
            <TextView
                android:id="@+id/tvDialogDepartment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvDialogSeniorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dialogHeaders"
                android:text="@string/tv_dialog_senior_text"/>
            <TextView
                android:id="@+id/tvDialogSenior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvDialogBarcodeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dialogHeaders"
                android:text="@string/tv_dialog_barcode_text"/>
            <TextView
                android:id="@+id/tvDialogBarcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvDialogLastVerifiedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dialogHeaders"
                android:text="@string/tv_dialog_last_verified_text"/>
            <TextView
                android:id="@+id/tvDialogLastVerified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>
    </TableLayout>

</LinearLayout>